# tsa-server

./: Cargo.toml  Dockerfile  docker-compose.yml
certificates/: ca_cert.pem  ca_private_key.pem  root_cert.crt  self_signed_ca_certificate.pem  tsa_cert.pem
key/: tsa.key
src/: add_certificate_chain.rs  create_tsa.rs  get_user_cert_data.rs  main.rs  prerequest.rs  process_tsq.rs  sign_digest.rs
